--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,7 +1,6 @@
-
+//view breakpoints
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
-
 
 //primary colors
 $primary-color-black: #323232;
@@ -14,3 +13,5 @@ $secondary-color-black: #000000;
 $secondary-color-blue: #0065AD;
 $secondary-color-mercury: #E1E1E1;
 $secondary-color-alabaster: #FAFAFA;
+
+
