--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,7 +1,7 @@
 @import "../../styles/partials/globals";
 @import "../../styles/partials/mixins";
 @import "../../styles/partials/variables";
-// @import "../../styles/partials/typography.scss";
+@import "../../styles/partials/typography.scss";
 
 .nav{
   display: flex;
@@ -48,15 +48,7 @@
 }
 
 &__upload-button{
-  display: flex;
-  align-items: center;
-  height: 2.25rem;
-  width: 100%;
-  background-color: $primary-color-blue;
-  border: none;
-  border-radius: 4px;
-  color: $primary-color-white;
-  font-weight: 600px;
+@include button
 }
 
 &__upload-text{
