--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -12,3 +12,14 @@
     }
 }
 
+@mixin button {
+  display: flex;
+  align-items: center;
+  height: 2.25rem;
+  width: 100%;
+  background-color: $primary-color-blue;
+  border: none;
+  border-radius: 4px;
+  color: $primary-color-white;
+  font-weight: 600px;
+}
