--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -21,5 +21,6 @@
   border: none;
   border-radius: 4px;
   color: $primary-color-white;
-  font-weight: 600px;
+  font-family: 'Avenir';
+  font-weight: 600;
 }
