--- a/src/components/PreviewVideo/PreviewVideo.scss
+++ b/src/components/PreviewVideo/PreviewVideo.scss
@@ -1,7 +1,26 @@
+@import "../../styles/partials/globals";
+@import "../../styles/partials/mixins";
+@import "../../styles/partials/variables";
+@import "../../styles/partials/typography.scss";
+
 .previewVideo{
+  margin-left: 1rem;
+  display: flex;
+  align-items: center;
+
+&__info{
+  padding: 1rem;
+
+}
 
 &__image{
-  height:100px;
+  height: 95px;
+  width: 130px;
+  border-radius: 4px;
+}
+
+&__title{
+  font-weight: 700;
 }
 
 }
