Final edits for styling in mobile

--- a/src/components/PreviewVideoContainer/PreviewVideoContainer.scss
+++ b/src/components/PreviewVideoContainer/PreviewVideoContainer.scss
@@ -6,6 +6,7 @@
 .previewVideoContainer{
   &__header{
     margin: 0 1rem;
+    padding: 1rem 0;
     font-size: .75rem;
     color: $primary-color-silver;
     font-weight: 500;
