--- a/src/components/PreviewVideo/PreviewVideo.scss
+++ b/src/components/PreviewVideo/PreviewVideo.scss
@@ -9,17 +9,18 @@
   align-items: center;
 
 &__info{
-  padding: 1rem;
-
+  padding-left: 1rem;
 }
 
 &__image{
   height: 95px;
   width: 130px;
   border-radius: 4px;
+  object-fit: cover;
 }
 
 &__title{
+  width: 100%;
   font-weight: 700;
 }
 
