--- a/src/components/PreviewVideoContainer/PreviewVideoContainer.scss
+++ b/src/components/PreviewVideoContainer/PreviewVideoContainer.scss
@@ -7,9 +7,8 @@
   &__header{
     margin: 0 1rem;
     padding: 1rem 0;
-    font-size: .75rem;
     color: $primary-color-silver;
-    font-weight: 500;
-    border-top: 1px solid $primary-color-silver;
+    @include section-header-mobile;
+    border-top: 1px solid $secondary-color-mercury;
   }
 }
