--- a/src/components/CommentsContainer/CommentsContainer.scss
+++ b/src/components/CommentsContainer/CommentsContainer.scss
@@ -30,12 +30,21 @@
     padding-bottom: .625rem;
     padding-left: .5rem;
     width: 100%;
+
+    @include tablet{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-end;
+    }
+
+ 
   }
 
   &__title{
-    font-size: .75rem;
-    font-weight: 700;
+    @include section-header-mobile;
     color: $primary-color-silver;
+
   }
 
   &__newComment{
@@ -43,15 +52,37 @@
     background-color: $secondary-color-alabaster;
     border: 1px solid $secondary-color-mercury;
     border-radius: 4px;
+
+    @include tablet {
+      height: 2.25rem;
+    }
   }
 
   &__button{
     margin-top: 1rem;
     @include button;
+
   }
 
   &__button-text{
     padding-left: 5rem;
+
+    @include tablet{
+      padding-right: 2rem;
+      margin-left: -3.5rem;
+    }
   }
+
+  &__formInput {
+
+
+    @include tablet{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding-right: 1.5rem;
+        padding-left: 0.5rem;
+      }
+    }
 
 }
