--- a/src/components/MainVideo/MainVideo.scss
+++ b/src/components/MainVideo/MainVideo.scss
@@ -7,4 +7,13 @@
   width: 100%;
   height: 15rem;
   margin-top: -1.5625rem;
+
+  @include tablet {
+    margin-top: 0;
+    background-color: $secondary-color-black;
+    height: 20rem;
+  }
+}
+
+.mainVideo__container{
 }
