--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -5,54 +5,104 @@
 
 .nav{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  
+  @include tablet{
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
 
-&__logo{
-  text-align: center;
-}
+  &__logo{
+    padding-left: 6.25rem;
 
-&__logo-image{
-  height: 1.5625rem;
-  padding: 1rem;
-}
+    @include tablet{
+      padding-left: 1rem;
+    }
+  }
 
-&__search {
-  display: flex;
-  justify-content: space-around;
-}
+  &__logo-image{
+    height: 1.5625rem;
+    padding: 1rem;
+  }
 
-&__search-bar{
-  width: 55%;
-  height: 2.25rem;
-  padding-left: 2.5rem;
-  background-color: $secondary-color-alabaster;
-  border: 1px solid $secondary-color-mercury;
-  border-radius: 4px;
-}
+  &__search {
+    display: flex;
+    padding: 0 1rem;
+  }
 
-&__search-icon{
-  position: absolute;
-  left: 30px;
-  top: 74px;
-}
+  &__search-bar{
+    width: 200px;
+    height: 2.25rem;
+    padding-left: 2.5rem;
+    background-color: $secondary-color-alabaster;
+    border: 1px solid $secondary-color-mercury;
+    border-radius: 4px;
+  }
 
-&__search-image{
-  object-fit: cover;
-  width: 2.25rem;
-  height: 2.25rem;
-  border-radius: 50%
-}
+  &__search-icon{
+    position: absolute;
+    left: 1.875rem;
+    top: 4.625rem;
 
+    @include tablet{
+      position: absolute;
+      left: 13.75rem;
+      top: 1.75rem
+    }
+  }
+
+  &__search-image{
+    object-fit: cover;
+    width: 2.25rem;
+    height: 2.25rem;
+    border-radius: 50%;
+
+    @include tablet{
+      display: none;
+    }
+
+  }
+
+  &__search-image--tablet{
+    display: none;
+
+    @include tablet{
+      object-fit: cover;
+      width: 2.25rem;
+      height: 2.25rem;
+      border-radius: 50%;  
+      display: flex;
+      flex-direction: row;
+    }
+  }
 }
 
 .upload{
   padding: 1rem 1em;
 
+  @include tablet{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
   &__button{
-  @include button
+    width: 290px;
+    @include button;
+
+    @include tablet{
+      width: 200px;
+      margin-right: 1rem;
+    }
   }
 
   &__button-text{
     padding-left: 5rem;
+
+    @include tablet{
+      padding-left: 3rem;
+    }
   }
 }
