--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -15,12 +15,88 @@
 @mixin button {
   display: flex;
   align-items: center;
-  height: 2.25rem;
-  width: 100%;
+  height: 2.5rem;
   background-color: $primary-color-blue;
   border: none;
   border-radius: 4px;
   color: $primary-color-white;
   font-family: 'Avenir';
-  font-weight: 600;
+  font-weight: 700;
+}
+
+@mixin button-tablet-desktop{
+  display: flex;
+  align-items: center;
+  height: 2.5rem;
+  width: 9.375rem;
+  background-color: $primary-color-blue;
+  border: none;
+  border-radius: 4px;
+  color: $primary-color-white;
+  font-family: 'Avenir';
+  font-weight: 700;
+}
+
+
+
+@mixin page-header-mobile{
+  font-size: 1.5rem;
+  line-height: 2rem;
+  font-weight: 700;
+  color: $primary-color-black;
+}
+
+@mixin page-header-tablet-desktop{
+  font-size: 2.0625rem;
+  line-height: 2.75rem;
+  font-weight: 700;
+  color: $primary-color-black;
+}
+
+@mixin section-header-mobile{
+  font-size: .75rem;
+  line-height: 1.125rem;
+  font-weight: 700;
+}
+
+@mixin section-header-tablet-desktop{
+  font-size: .75rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+}
+
+@mixin subheader-mobile{
+  font-size: .8125rem;
+  line-height: 1.125rem;
+  font-weight: 500;
+}
+
+@mixin subheader-tablet-desktop{
+  font-size: .875rem;
+  line-height: 1.375rem;
+  font-weight: 700;
+}
+
+@mixin body-copy-mobile{
+  font-size: .8125rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+}
+
+@mixin body-copy-tablet-desktop{
+  font-size: .875rem;
+  line-height: 1.375rem;
+  font-weight: 400;
+}
+
+@mixin labels-buttons-mobile{
+  font-size: .625rem;
+  line-height: 1.25rem;
+  font-weight: 700;
+}
+
+@mixin labels-buttons-tablet-desktop{
+  font-size: .75rem;
+  line-height: 1.25rem;
+  font-weight: 700;
 }
