--- a/src/components/CommentsContainer/CommentsContainer.scss
+++ b/src/components/CommentsContainer/CommentsContainer.scss
@@ -48,14 +48,17 @@
   }
 
   &__newComment{
-    height: 4rem;
+    height: 5rem;
     background-color: $secondary-color-alabaster;
     border: 1px solid $secondary-color-mercury;
     border-radius: 4px;
+    width: 97.5%;
+    text-align: start;
 
     @include tablet {
       height: 2.25rem;
     }
+
   }
 
   &__button{
@@ -74,8 +77,7 @@
   }
 
   &__formInput {
-
-
+    
     @include tablet{
         display: flex;
         flex-direction: column;
