--- a/src/components/PreviewVideoContainer/PreviewVideoContainer.scss
+++ b/src/components/PreviewVideoContainer/PreviewVideoContainer.scss
@@ -11,4 +11,8 @@
     @include section-header-mobile;
     border-top: 1px solid $secondary-color-mercury;
   }
+
+  @include desktop{
+    border-left: 1px solid $secondary-color-mercury;
+  }
 }
