Adding secondary fonts, editing axios get

--- a/src/components/NextVideo/NextVideo.scss
+++ b/src/components/NextVideo/NextVideo.scss
@@ -3,7 +3,7 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/typography.scss";
 
-.previewVideo{
+.nextVideo{
   margin-left: 1rem;
   display: flex;
   align-items: center;
