--- a/src/components/NextVideoContainer/NextVideoContainer.scss
+++ b/src/components/NextVideoContainer/NextVideoContainer.scss
@@ -3,7 +3,7 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/typography.scss";
 
-.previewVideoContainer{
+.nextVideoContainer{
   &__header{
     margin: 0 1rem;
     padding: 1rem 0;
