--- a/src/styles/partials/typography.scss
+++ b/src/styles/partials/typography.scss
@@ -1,10 +1,14 @@
 //fonts
 @font-face {
   font-family: 'Avenir', Arial, Helvetica, sans-serif;
-  src: url(../../assets/fonts/AvenirNextLTPro-Bold.otf);
+  src: url(../../assets/fonts/AvenirNextLTPro-Bold.otf) format("opentype"),
+  url(../../assets/fonts/Alternative/AvenirNextLTProBold.ttf) format("truetype");
 }
 
 @font-face {
   font-family: 'Avenir', Arial, Helvetica, sans-serif;
-  src: url(../../assets/fonts/AvenirNextLTPro-Regular.otf);
+  src: url(../../assets/fonts/AvenirNextLTPro-Regular.otf) format("opentype"),
+  url(../../assets/fonts/Alternative/AvenirNextLTPro.ttf) format("truetype");
 }
+
+//add in the secondary fallback fonts urls in each of the fontface
