--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -3,128 +3,129 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/typography.scss";
 
-.nav{
-  display: flex;
-  flex-wrap: wrap;
-  
-  @include tablet{
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+.nav {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
 
-  @include desktop{
-    padding: 0 4rem;
-  }
-  }
+	@include tablet {
+		flex-wrap: nowrap;
+		flex-direction: row;
+		justify-content: space-around;
+		align-items: center;
 
-  &__logo{
-    padding-left: 6.25rem;
+		@include desktop {
+			padding: 0 4rem;
+		}
+	}
 
-    @include tablet{
-      padding-left: 1rem;
-    }
-  }
+	&__logo {
+		padding-left: 6.25rem;
 
-  &__logo-image{
-    height: 1.5625rem;
-    padding: 1rem;
-  }
+		@include tablet {
+			padding-left: 1rem;
+		}
+	}
 
-  &__search {
-    display: flex;
-    padding: 0 1rem;
+	&__logo-image {
+		height: 1.5625rem;
+		padding: 1rem;
+	}
 
+	&__search {
+		display: flex;
+		padding: 0 1rem;
 
-    @include desktop{
-      padding-left: 25rem;
-    }
-  }
+		@include desktop {
+			padding-left: 25rem;
+		}
+	}
 
-  &__search-bar{
-    width: 200px;
-    height: 2.25rem;
-    padding-left: 2.5rem;
-    background-color: $secondary-color-alabaster;
-    border: 1px solid $secondary-color-mercury;
-    border-radius: 4px;
+	&__search-bar {
+		width: 200px;
+		height: 2.25rem;
+		padding-left: 2.5rem;
+		background-color: $secondary-color-alabaster;
+		border: 1px solid $secondary-color-mercury;
+		border-radius: 4px;
 
-  }
+	}
 
-  &__search-icon{
-    position: absolute;
-    left: 1.875rem;
-    top: 4.625rem;
+	&__search-icon {
+		position: absolute;
+		left: 1.875rem;
+		top: 4.625rem;
 
-    @include tablet{
-      position: absolute;
-      left: 13.75rem;
-      top: 1.75rem
-    }
+		@include tablet {
+			position: absolute;
+			left: 13.75rem;
+			top: 1.75rem
+		}
 
-    @include desktop{
-      left: 42rem;
-    }
-  }
+		@include desktop {
+			left: 42rem;
+		}
+	}
 
-  &__search-image{
-    object-fit: cover;
-    width: 2.25rem;
-    height: 2.25rem;
-    border-radius: 50%;
+	&__search-image {
+		width: 100%;
+		object-fit: cover;
+		width: 2.25rem;
+		height: 2.25rem;
+		border-radius: 50%;
 
-    @include tablet{
-      display: none;
-    }
+		@include tablet {
+			display: none;
+		}
 
-  }
+	}
 
-  &__search-image--tablet{
-    display: none;
+	&__search-image--tablet {
+		display: none;
 
-    @include tablet{
-      object-fit: cover;
-      width: 2.25rem;
-      height: 2.25rem;
-      border-radius: 50%;  
-      display: flex;
-      flex-direction: row;
-    }
-  }
+		@include tablet {
+			object-fit: cover;
+			width: 2.25rem;
+			height: 2.25rem;
+			border-radius: 50%;
+			display: flex;
+			flex-direction: row;
+		}
+	}
 }
 
-.upload{
-  padding: 1rem 1em;
+.upload {
+	padding: 1rem 1em;
 
-  @include tablet{
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-  }
+	@include tablet {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: space-between;
+	}
 
-  &__button{
-    width: 290px;
-    @include button;
+	&__button {
+		width: 290px;
+		@include button;
 
-    @include tablet{
-      width: 200px;
-      margin-right: 1rem;
-    }
-  }
+		@include tablet {
+			width: 200px;
+			margin-right: 1rem;
+		}
+	}
 
-  &__button-text{
-    padding-left: 5rem;
-    text-decoration: 'none';
+	&__button-text {
+		padding-left: 5rem;
+		text-decoration: 'none';
 
 
-    @include tablet{
-      padding-left: 3rem;
-    }
-  }
+		@include tablet {
+			padding-left: 3rem;
+		}
+	}
 }
 
 a:-webkit-any-link {
-  text-decoration: none;
-  color: white;
-  cursor: pointer;
+	text-decoration: none;
+	color: white;
+	cursor: pointer;
 }
