--- a/src/components/VideoDetails/VideoDetails.scss
+++ b/src/components/VideoDetails/VideoDetails.scss
@@ -3,68 +3,106 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/typography.scss";
 
-.videoDetails{
-  margin: 0 1rem;
-  font-size: 0.8rem;
+.videoDetails {
+	margin: 0;
+	font-size: 0.8rem;
+	width: 100%;
 
-  &__header{
-    @include page-header-mobile;
+	&__image {
+		width: 100%;
+		height: 15rem;
+		margin-top: -1.5625rem;
 
-    @include tablet{
-      @include page-header-tablet-desktop;
-    }
-  }
+		@include tablet {
+			margin-top: 0;
+			background-color: $secondary-color-black;
+			height: 20rem;
+		}
 
-  &__container{
-    @include subheader-mobile;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    border-top: 1px solid $secondary-color-mercury;
-    border-bottom: 1px solid $secondary-color-mercury;
-  }
+		@include desktop {
+			height: 35rem;
+		}
+	}
 
-  &__date{
-    color: $primary-color-silver;
-  }
+	&__container {
+		display: flex;
+		flex-direction: column;
+		@include subheader-mobile;
+		width: 100%
 
-  &__info{
+	}
 
+	&__header {
+		border-bottom: 1px solid $secondary-color-mercury;
+		padding-bottom: .5rem;
+		@include page-header-mobile;
 
-    @include tablet {
-      display: flex;
-    }
-  }
+		@include tablet {
+			@include page-header-tablet-desktop;
+		}
+	}
 
-  &__info-2{
-    color: $primary-color-silver;
-    padding-right: 2rem;
+	&__date {
+		color: $primary-color-silver;
+	}
 
-    @include tablet {
-      display: flex;
-    }
-  }
+	&__info {
+		@include tablet {
+			display: flex;
+		}
+	}
 
-  &__channel {
+	&__info-2 {
+		color: $primary-color-silver;
+		padding-right: 2rem;
 
-    @include tablet {
-      padding-right: 2rem;
-    }
-  }
+		@include tablet {
+			display: flex;
+		}
+	}
 
-  &__likes {
+	&__channel {
+		@include tablet {
+			padding-right: 2rem;
+		}
+	}
 
-    @include tablet{
-      padding-left: 2rem;
-    }
-  }
+	&__likes {
+		@include tablet {
+			padding-left: 2rem;
+		}
+	}
 
-  &__icon{
-    padding-right: .4375rem;
-  }
+	&__icon {
+		padding-right: 0.4375rem;
+	}
 
-  &__description{
-    @include body-copy-mobile;
-  }
-
+	&__description {
+		@include body-copy-mobile;
+	}
 }
+
+// .app__desktopDivMain{
+
+//   @include desktop{
+//     display: flex;
+//     flex-direction: row;
+//     width: 87%;
+//     margin: 0 auto;
+//   }
+// }
+
+// .app__desktopDivDetails{
+
+//   @include desktop{
+//       width: 75%;
+
+//   }
+// }
+
+// .app__previewVideoContainer{
+
+//   @include desktop{
+//     width: 30%;
+//   }
+// }
