--- a/src/pages/MainVideo/MainVideo.scss
+++ b/src/pages/MainVideo/MainVideo.scss
@@ -3,18 +3,18 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/typography.scss";
 
-.mainVideo__image{
-  width: 100%;
-  height: 15rem;
-  margin-top: -1.5625rem;
+// .mainVideo__image{
+//   width: 100%;
+//   height: 15rem;
+//   margin-top: -1.5625rem;
 
-  @include tablet {
-    margin-top: 0;
-    background-color: $secondary-color-black;
-    height: 20rem;
-  }
+//   @include tablet {
+//     margin-top: 0;
+//     background-color: $secondary-color-black;
+//     height: 20rem;
+//   }
 
-  @include desktop{
-    height: 35rem;
-  }
-}
+//   @include desktop{
+//     height: 35rem;
+//   }
+// }
