Final editing for mobile view

--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -37,8 +37,9 @@
   }
 
   &__text{
+    width: 100%;
     margin-left: 3rem;
-    margin-top: -0.4rem;
+    margin-top: -0.5rem;
     @include body-copy-mobile;
 
   }
