--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -106,7 +106,7 @@
 }
 
 .upload {
-	// padding: 1rem 1em;
+	padding: 1rem 1em;
 	width: 100%;
 
 
@@ -127,8 +127,9 @@
 	}
 
 	&__button-text {
-		padding-left: 5rem;
+		width: 100%;
 		text-decoration: 'none';
+		text-align: center;
 
 
 		@include tablet {
