--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -11,7 +11,6 @@
 	@include tablet {
 		flex-wrap: nowrap;
 		flex-direction: row;
-		justify-content: space-around;
 		align-items: center;
 
 		@include desktop {
@@ -22,17 +21,15 @@
 	&__logo {
 		width: 100%;
 		margin: 1rem 0;
-		// padding-left: 6.25rem;
-
-		@include tablet {
-			// padding-left: 1rem;
-		}
 	}
 
 	&__logo-image {
 		width: 100%;
 		height: 1.5625rem;
-		// padding: 1rem;
+
+		@include tablet {
+			margin: 0;
+		}
 	}
 
 	&__search-container {
@@ -67,8 +64,7 @@
 		top: 4.625rem;
 
 		@include tablet {
-			position: absolute;
-			left: 13.75rem;
+			left: 17rem;
 			top: 1.75rem
 		}
 
@@ -108,7 +104,6 @@
 	padding: 1rem 1em;
 	width: 100%;
 
-
 	@include tablet {
 		display: flex;
 		flex-direction: row-reverse;
@@ -120,8 +115,8 @@
 		@include button;
 
 		@include tablet {
-			width: 200px;
 			margin-right: 1rem;
+			width: 12rem;
 		}
 	}
 
@@ -129,11 +124,6 @@
 		width: 100%;
 		text-decoration: 'none';
 		text-align: center;
-
-
-		@include tablet {
-			padding-left: 3rem;
-		}
 	}
 }
 
