--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -13,9 +13,9 @@
 		flex-direction: row;
 		align-items: center;
 
-		@include desktop {
-			padding: 0 4rem;
-		}
+		// @include desktop {
+		// 	padding: 0 4rem;
+		// }
 	}
 
 	&__logo {
@@ -27,9 +27,9 @@
 		width: 100%;
 		height: 1.5625rem;
 
-		@include tablet {
-			margin: 0;
-		}
+		// @include tablet {
+		// 	margin: 0;
+		// }
 	}
 
 	&__search-container {
@@ -43,9 +43,9 @@
 		display: flex;
 		padding: 0 1rem;
 
-		@include desktop {
-			padding-left: 25rem;
-		}
+		// @include desktop {
+		// 	padding-left: 25rem;
+		// }
 	}
 
 	&__search-bar {
@@ -69,7 +69,7 @@
 		}
 
 		@include desktop {
-			left: 42rem;
+			left: 28rem;
 		}
 	}
 
@@ -97,7 +97,12 @@
 			display: flex;
 			flex-direction: row;
 		}
+
+		@include desktop{
+			margin-right: 10rem;
+		}
 	}
+
 }
 
 .upload {
