--- a/src/components/VideoDetails/VideoDetails.scss
+++ b/src/components/VideoDetails/VideoDetails.scss
@@ -11,14 +11,15 @@
 	&__image {
 		width: 100%;
 		max-height: 15rem;
+		background-color: $secondary-color-black;
+
 
 		@include tablet {
-			background-color: $secondary-color-black;
 			max-height: 20rem;
 		}
 
 		@include desktop {
-			height: 35rem;
+			max-height: 35rem;
 		}
 	}
 
@@ -26,8 +27,10 @@
 		display: flex;
 		flex-direction: column;
 		@include subheader-mobile;
-		width: 100%
 
+		@include desktop{
+			width: 75%;
+		}
 	}
 
 	&__header {
@@ -96,28 +99,3 @@
 		@include body-copy-mobile;
 	}
 }
-
-// .app__desktopDivMain{
-
-//   @include desktop{
-//     display: flex;
-//     flex-direction: row;
-//     width: 87%;
-//     margin: 0 auto;
-//   }
-// }
-
-// .app__desktopDivDetails{
-
-//   @include desktop{
-//       width: 75%;
-
-//   }
-// }
-
-// .app__previewVideoContainer{
-
-//   @include desktop{
-//     width: 30%;
-//   }
-// }
