--- a/src/pages/MainVideo/MainVideo.scss
+++ b/src/pages/MainVideo/MainVideo.scss
@@ -3,18 +3,35 @@
 @import "../../styles/partials/variables";
 @import "../../styles/partials/typography.scss";
 
-// .mainVideo__image{
-//   width: 100%;
-//   height: 15rem;
-//   margin-top: -1.5625rem;
+.mainVideo{
+  display: flex;
+  flex-direction: column;
 
-//   @include tablet {
-//     margin-top: 0;
-//     background-color: $secondary-color-black;
-//     height: 20rem;
-//   }
 
-//   @include desktop{
-//     height: 35rem;
-//   }
-// }
+
+  &__container{
+
+    display: flex;
+    flex-direction: column;
+    // @include desktop{
+    //   display: flex;
+    //   flex-direction: row;
+    // }
+  }
+
+  &__example{
+    @include desktop{
+      display: flex;
+      margin-top: 0;
+    }
+  }
+
+  &__next-video{
+    // @include desktop{
+    //   display: flex;
+    //   flex-direction: row;
+    // }
+
+  }
+
+}
