--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -22,6 +22,7 @@
   color: $primary-color-white;
   font-family: 'Avenir';
   font-weight: 700;
+  text-decoration: none;
 }
 
 @mixin button-tablet-desktop{
