--- a/src/components/CommentsContainer/CommentsContainer.scss
+++ b/src/components/CommentsContainer/CommentsContainer.scss
@@ -55,6 +55,10 @@
     @include tablet {
       height: 2.25rem;
     }
+
+    @include desktop{
+      width: 100%;
+    }
   }
 
   &__button{
@@ -62,15 +66,19 @@
     margin-top: 1rem;
     @include button;
 
+    @include desktop{
+      width: 45%;
+    }
+
   }
 
   &__button-text{
     width: 100%;
 
-    @include tablet{
-      padding-right: 2rem;
-      margin-left: -3.5rem;
-    }
+    // @include tablet{
+    //   padding-right: 2rem;
+    //   margin-left: -3.5rem;
+    // }
   }
 
   &__formInput {
