--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -123,6 +123,12 @@
 			margin-right: 1rem;
 			width: 12rem;
 		}
+
+		&:hover{
+			cursor: pointer;
+			background-color: $secondary-color-blue;
+			transition: 0.5s ease;
+		}
 	}
 
 	&__button-text {
