--- a/src/pages/UploadPage/UploadPage.scss
+++ b/src/pages/UploadPage/UploadPage.scss
@@ -84,10 +84,6 @@
 		@include tablet {
 			border-bottom: 1px solid $secondary-color-mercury;
 		}
-
-		// @include desktop{
-		//   width: 100%;
-		// }
 	}
 
 	&__video-title {
@@ -106,8 +102,6 @@
 		border-radius: 4px;
 		width: 97.5%;
 		text-align: start;
-
-
 	}
 
 	&__buttons {
@@ -127,6 +121,12 @@
 	&__button {
 		@include button;
 		width: 100%;
+
+		&:hover{
+			cursor: pointer;
+			background-color: $secondary-color-blue;
+			transition: 0.5s ease;
+		}
 
 		@include tablet {
 			width: 30%;
